Object As Font not working #94624
Labels
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
No due date set.
Dependencies
No dependencies set.
Reference: blender/blender#94624
Loading…
Reference in New Issue
Block a user
No description provided.
Delete Branch "%!s()"
Deleting a branch is permanent. Although the deleted branch may continue to exist for a short time before it actually gets removed, it CANNOT be undone in most cases. Continue?
System Information
Operating system: Windows 10
Graphics card: Nvidia GeForce GTX 1650
Blender Version
Broken: Blender 3.0.0
Worked: Not sure
Short description of error
Object As Font option is not working for a Text object
Exact steps for others to reproduce the error
Followed from https://docs.blender.org/manual/en/latest/modeling/texts/properties.html
Expected Result: The text should display the 2 objects instead of letters A and B
Obtained Result: No change occurs and the letters AB are displayed
Object as Font #94624.blend
Added subscriber: @RMK-1
Added subscriber: @HDMaster84
Changed status from 'Needs Triage' to: 'Confirmed'
Worked last in version 2.93 (tested using hash:
0f66dbea90
)Added subscriber: @Josephbburg
I'm having the same issue, using a release build of 3.0.0
The (modified) in there is because I removed some printf()'s in the depsgraph that were filling my terminal with useless messages, other than that I'm using the ordinary 3.0 release. The feature works in 2.93.
I did a git-bisect. The bug was caused by commit
b9febb54a4
'Geometry Nodes: Support modifier on curve objects'.Added subscriber: @HooglyBoogly
@HooglyBoogly
b9febb54a4
was your commit, so tagging you here.It's worth pointing out that the Object Font's behaviour in 2.93 is to act just like other dupli-verts, that is, to display the instancer and the instances unless you disable "Show Instancer" in the object's view settings... that being said, it would be OK if it were enabled automatically for text objects, IMO.
I did some further investigation.
As a work around, enabling "Fast editing" seems to make it work.
Sharing it, in case it helps someone.
This issue was referenced by
71bc9d4760
This issue was referenced by
97c2c39916
Changed status from 'Confirmed' to: 'Resolved'